--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-flip-counter",
+  "name": "@jujiyangasli/react-flip-counter",
   "version": "0.4.0",
   "description": "React flip countdown timer",
   "main": "src/Countdown/index.js",
-  "author": "Eugene Yemelin",
+  "author": "jujiyangasli",
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
